# EchoJEPA

./: .gitignore  CLAUDE.md  README.md  batch_classify.py  build_manifests.ipynb  classify_cohorts1-9.py  classify_cohorts1-9_array.slurm  config.yaml  convert_cohorts1-9_array.slurm  create_allclips.py  deidentify_results.py  dicom_batch_convert.sh  extract_pixels.py  fix_lab_labels.py  fix_line_endings.sh  merge_classification_results.sh  plot.ipynb  pyproject.toml  run_details.md  run_probes.py  sample_for_annotation.py  scratch.ipynb  setup_cpu_pytorch.sh  summarize_view_predictions.py  train_ehr.py  view_classification.ipynb  vjepa2_demo.ipynb  vjepa_infer.sbatch
classifier/: README.md  color_inference_18m.py  convert_to_parquet.py  convnext_training.py  cooldown.py  data_prep_v3.ipynb  download_convnext.py  download_selected_studies.py  fix_inference_checkpoint.py  inference_18m.py  make_patient_split.py  make_stratified_subset.py  make_view_labels_space_sep.py  map_labels_to_mp4.py  resize_dataset_s3.py  s3_download_studies.py  s3_list_studies.py  sample_and_check_s3_mp4s.py  split_summary.txt  train_convnext.py  uhn_quality_22k_mapping_train.json  uhn_views_22k_mapping_train.json  uhn_zoom_22k_mapping_train.json  view_inference_18m.py
claude/: DIRECTORY.md
data/: Dockerfile  README.md  deid_overlap.ipynb  echonet.ipynb  ef_scaler.pkl  heartlab_link.ipynb  la_dilation_temporal-Copy1.ipynb  la_dilation_temporal_v2.ipynb  label_mapping.json  multi_rvfx_splits.ipynb  mvr_dataset.ipynb  mvr_splits.ipynb  plot_umap.py  rvsp.ipynb  tapse.ipynb  tvr_dataset.ipynb  (+1 more)
(+545 files in other folders)
