[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vjepa2"
version = "0.0.1"
description = "PyTorch code and models for V-JEPA 2."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.isort]
profile="black"
line_length=119

[tool.black]
line-length = 119
